fixing gap pt2
trying to change the nav bar now

--- a/style.css
+++ b/style.css
@@ -119,3 +119,9 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+
+#gapfixer {
+	margin:0px;
+	
+	
+}
